--- a/.github/workflows/multiple_shells.yaml
+++ b/.github/workflows/multiple_shells.yaml
@@ -26,7 +26,7 @@ jobs:
       - name: print some default env variables
         run: |
           echo "HOME: ${HOME}"
-          echo "GITHUB_WORKFLOW: ${GITHUB_WORKFLOW}"
+          echo "GITHUB WORKFLOW: ${GITHUB_WORKFLOW}"
           echo "GITHUB_ACTION: ${GITHUB_ACTION}"
           echo "GITHUB_ACTIONS: ${GITHUB_ACTIONS}"
           echo "GITHUB_ACTOR: ${GITHUB_ACTOR}"
